--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -171,6 +171,23 @@
 
 .cart {
   padding: 10px;
+  &-text {
+    position: relative;
+  }
+  &-count {
+    position: absolute;
+    top: 2px;
+    right: 12px;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 11px;
+    background-color: #985ace;
+    border-radius: 100%;
+  }
 }
 
 .cart,
