--- a/src/pages/Autopart/Autopart.scss
+++ b/src/pages/Autopart/Autopart.scss
@@ -5,6 +5,11 @@
     align-items: center;
     justify-content: space-between;
   }
+  &__left {
+    img {
+      max-width: 100%;
+    }
+  }
   &__right {
     display: flex;
     flex-direction: column;
