--- a/src/components/AutopartItem/AutopartItem.scss
+++ b/src/components/AutopartItem/AutopartItem.scss
@@ -17,7 +17,7 @@
   &__img {
     height: 350px;
     img {
-      height: 100%;
+      // height: 100%;
       width: 100%;
       object-fit: cover;
     }
