--- a/src/index.scss
+++ b/src/index.scss
@@ -10,10 +10,22 @@
 
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 
 body {
   font-family: "Open Sans", sans-serif;
+  height: 100%;
+}
+
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex: 1 1 auto;
 }
 
 .wrapper {
